test/langtools/tools/javac/valhalla/lworld-values/RefDefault/MalformedParameterizedType.out
MalformedParameterizedType.java:16:14: compiler.err.improperly.formed.type.param.missing
MalformedParameterizedType.java:17:14: compiler.err.improperly.formed.type.param.missing
MalformedParameterizedType.java:22:16: compiler.err.improperly.formed.type.param.missing
MalformedParameterizedType.java:23:16: compiler.err.improperly.formed.type.param.missing
4 errors
